aula06/projeto/base/3.2-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: docker-registry:5000/4linux-php:latest
        imagePullPolicy: IfNotPresent
        name: 4linux-php
      imagePullSecrets:
      - name: regcred
