aula06/projeto/base/4.3-memcached-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memcached1
  name: memcached1
spec:
  clusterIP: None
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: memcached1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memcached2
  name: memcached2
spec:
  clusterIP: None
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: memcached2
